--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -7,8 +7,12 @@
   @include desktopHd {
     padding: 65px 5vw;
   }
+  @include tablets {
+    align-items: flex-start;
+    padding: 60px 5vw;
+  }
   @include phones {
-    padding: 64px 30px;
+    padding: 60px 30px;
   }
 
   &__hamburger {
@@ -16,6 +20,11 @@
     top: 67px;
     right: 40px;
     z-index: 1;
+    display: none;
+    outline: none;
+    @include tablets {
+      display: block;
+    }
   }
 
   &__menu {
@@ -30,7 +39,7 @@
   &__socials {
     @include tablets {
       position: absolute;
-      top: 65px;
+      top: 52px;
       right: 160px;
     }
     @include phones {
@@ -46,7 +55,7 @@
     width: 326px;
     background-color: white;
     transform: translateX(100%);
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
     overflow: hidden;
 
     @include phones {
@@ -71,7 +80,7 @@
     width: 24px;
     height: 2px;
     background-color: white;
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
     &:nth-child(1) {
       top: 0;
     }
