add smooth behavior for scroll and fix parallax

--- a/src/index.pug
+++ b/src/index.pug
@@ -24,9 +24,10 @@ html(lang="ru")
     meta(name="theme-color" content="#ffffff")
   body
     .wrapper
-      include components/parallax
-      include components/main-section
-      include components/about-section
+      .parallax-container
+        include components/parallax
+        include components/main-section
+        include components/about-section
       include components/skills-section
       include components/works-section
       include components/feedback-section
