--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -14,13 +14,13 @@
       height: 53vh;
     }
     &_mountains {
-      top: 30vh;
+      top: 28vh;
       left: 0;
       right: 0;
-      height: 50vh;
+      height: 55vh;
     }
     &_title {
-      top: 40vh;
+      top: 38vh;
       left: 50%;
       margin-left: -215px;
       @include desktop {
@@ -36,7 +36,7 @@
       }
     }
     &_subtitle {
-      top: 40vh;
+      top: 38vh;
       right: 50%;
       margin-right: 275px;
       @include desktop {
@@ -58,11 +58,11 @@
     &_train {
       left: 0;
       right: 0;
-      top: 42vh;
+      top: 40vh;
       height: 48vh;
     }
     &_ground {
-      top: 80vh;
+      top: 79vh;
       left: 0;
       right: 0;
       height: 40vh;
@@ -75,8 +75,8 @@
         left: 0;
         right: 0;
         top: 99%;
-        height: 50vh;
-        background-color: $dark-gray;
+        height: 20vh;
+        background-image: linear-gradient(to bottom, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
       }
     }
     &_first-gradient {
