--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -28,6 +28,11 @@ body {
   background-color: $dark-gray;
 }
 
+.parallax-container {
+  background-image: url('~images/content/black-background.png');
+  background-size: contain;
+}
+
 .container {
   margin: 0 auto;
   max-width: 1480px;
