--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -1,6 +1,6 @@
 include ../../components/arrow-button
 
-script(type="text/x-template")#reviews
+script(type="text/x-template")#reviews-content
   .reviews
     .reviews__header
       .reviews__title Что обо мне говорят
