--- a/src/components/feedback-section.pug
+++ b/src/components/feedback-section.pug
@@ -1,4 +1,4 @@
-section#feedback.feedback-section
+section#reviews.feedback-section
   each index in [1, 2, 3, 4]
     +image(`content/leaf${index}.png`, 'feedback-section__leaf')
   .feedback-section__content
