show mobile menu

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -9,7 +9,8 @@ header.header
       .hamburger__line
     - }
   .header__sidebar
+    include sidebar
   .header__menu
-    +menu('header')
+    +menu()
   .header__socials
     +socials()
