--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -21,6 +21,9 @@
       }
     }
   }
+  &_dark &__link {
+    opacity: 1;
+  }
   &__icon {
     fill: white;
     &_insta {
@@ -32,6 +35,9 @@
     &_github {
       width: 28px;
     }
+  }
+  &_dark &__icon {
+    fill: $text-color;
   }
   &_bordered {
     .socials__link {
