--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -31,4 +31,14 @@
       font-size: 14px;
     }
   }
+  &_sidebar &__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  &_sidebar &__link {
+    font-size: 18px;
+    color: $text-color;
+    font-weight: 600;
+    line-height: 48px;
+  }
 }
