some fixes in landing

--- a/src/components/feedback-form.pug
+++ b/src/components/feedback-form.pug
@@ -2,7 +2,7 @@ include input
 include textarea
 include button
 
-form#contact.feedback-form
+form.feedback-form
   .feedback-form__title Связаться со мной
   .feedback-form__row
     .feedback-form__name
