--- a/src/components/feedback-section.pug
+++ b/src/components/feedback-section.pug
@@ -4,5 +4,5 @@ section#reviews.feedback-section
   .feedback-section__content
     .feedback-section__reviews
       #reviews-container
-    .feedback-section__form
+    #contact.feedback-section__form
       include feedback-form
