--- a/src/styles/blocks/about-section.pcss
+++ b/src/styles/blocks/about-section.pcss
@@ -10,7 +10,7 @@
   @include desktop() {
     margin: 0 auto;
     max-width: 1000px;
-    padding: 0 40px 147px;
+    padding: 20vh 40px 147px;
   }
 
   @include phones() {
