--- a/src/styles/blocks/feedback-section.pcss
+++ b/src/styles/blocks/feedback-section.pcss
@@ -27,13 +27,7 @@
     opacity: 0.9;
   }
   &__reviews {
-    margin-bottom: 200px;
-    @include desktop {
-      margin-bottom: 120px;
-    }
-    @include tablets {
-      margin-bottom: 150px;
-    }
+    margin-bottom: 50px;
   }
   &__content {
     position: relative;
@@ -41,6 +35,13 @@
   }
   &__form {
     max-width: 863px;
+    padding-top: 150px;
+    @include desktop {
+      padding-top: 70px;
+    }
+    @include tablets {
+      padding-top: 100px;
+    }
   }
   &__leaf {
     position: absolute;
