--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -15,6 +15,10 @@
     padding: 60px 30px;
   }
 
+  &__logo {
+    text-decoration: none;
+  }
+
   &__hamburger {
     position: absolute;
     top: 67px;
