--- a/src/styles/blocks/sidebar.pcss
+++ b/src/styles/blocks/sidebar.pcss
@@ -1,7 +1,9 @@
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  padding-top: 27vh;
   padding-left: 65px;
   background-color: white;
   &__menu {
