--- a/src/components/parallax.pug
+++ b/src/components/parallax.pug
@@ -2,16 +2,16 @@ include ../mixins
 
 .parallax
   .parallax__layer.parallax__layer_sky(data-speed="15")
-    +image('content/sky.webp', 'parallax__image')
+    +image('content/sky.jpg', 'parallax__image')
   .parallax__layer.parallax__layer_mountains(data-speed="12")
-    +image('content/mountains.webp', 'parallax__image')
+    +image('content/mountains.png', 'parallax__image')
   .parallax__layer.parallax__layer_title(data-speed="9")
     include main-title
   .parallax__layer.parallax__layer_subtitle(data-speed="9")
     include main-subtitle
   .parallax__layer.parallax__layer_train(data-speed="6")
-    +image('content/train.webp', 'parallax__image')
+    +image('content/train.png', 'parallax__image')
   .parallax__layer.parallax__layer_ground(data-speed="3")
-    +image('content/grass.webp', 'parallax__image')
+    +image('content/grass.png', 'parallax__image')
   .parallax__layer.parallax__layer_first-gradient(data-speed="3")
   .parallax__layer.parallax__layer_second-gradient(data-speed="3")
