--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Портфолио | ТК
+    style img { width: 100% }
     meta(name="description" content="Сайт-портфолио веб-разработчика Курочкиной Татьяны")
     link(rel="apple-touch-icon" sizes="57x57" href=require("../public/apple-icon-57x57.png"))
     link(rel="apple-touch-icon" sizes="60x60" href=require("../public/apple-icon-60x60.png"))
