--- a/src/styles/blocks/button.pcss
+++ b/src/styles/blocks/button.pcss
@@ -15,4 +15,7 @@
   &:hover {
     background-image: linear-gradient(to right, #ff7f00 0%, #ff9d00 100%);
   }
+  &:focus {
+    outline: none;
+  }
 }
