--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -27,6 +27,9 @@
     &:hover {
       color: $accent-color;
     }
+    &:focus {
+      color: white;
+    }
     @include desktop {
       font-size: 14px;
     }
