--- a/src/styles/blocks/main-subtitle.pcss
+++ b/src/styles/blocks/main-subtitle.pcss
@@ -6,12 +6,12 @@
   text-align: right;
   opacity: 0.4;
 
-  @include desktop() {
+  @include desktop {
     font-size: 16px;
     text-align: center;
   }
 
-  @include phones() {
+  @include phones {
     font-size: 14px;
     line-height: 24px;
   }
