--- a/src/styles/blocks/main-title.pcss
+++ b/src/styles/blocks/main-title.pcss
@@ -3,19 +3,19 @@
   font-size: 72px;
   font-weight: 800;
   line-height: 60px;
-  
-  @include desktop() {
+
+  @include desktop {
     font-size: 48px;
     line-height: 48px;
   }
 
-  @include tablets() {
+  @include tablets {
     font-size: 48px;
     line-height: 48px;
     text-align: center;
   }
 
-  @include phones() {
+  @include phones {
     font-size: 36px;
   }
 }
