--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -27,11 +27,11 @@
         left: 45%;
         margin-left: 0;
       }
-      @include tablets() {
+      @include tablets {
         left: 50%;
         margin-left: -137px;
       }
-      @include phones() {
+      @include phones {
         margin-left: -102px;
       }
     }
@@ -43,14 +43,14 @@
         right: 55%;
         margin-right: 60px;
       }
-      @include tablets() {
+      @include tablets {
         top: calc(40vh - 77px);
         left: 50%;
         right: auto;
         margin-left: -72px;
         margin-right: auto;
       }
-      @include phones() {
+      @include phones {
         margin-left: -65px;
         top: calc(40vh - 67px);
       }
