--- a/src/styles/blocks/remark.pcss
+++ b/src/styles/blocks/remark.pcss
@@ -8,17 +8,17 @@
   line-height: 30px;
   opacity: 0.5;
 
-  @include desktop() {
+  @include desktop {
     font-size: 14px;
     line-height: 24px;
   }
 
-  @include tablets() {
+  @include tablets {
     margin: 0 auto;
     max-width: 500px;
     text-align: center;
   }
-  @include phones() {
+  @include phones {
     text-align: left;
   }
 
