--- a/src/styles/blocks/avatar.pcss
+++ b/src/styles/blocks/avatar.pcss
@@ -4,7 +4,7 @@
   border-radius: 50%;
   overflow: hidden;
 
-  @include desktop() {
+  @include desktop {
     width: 172px;
     height: 172px;
   }
