--- a/src/styles/blocks/profile.pcss
+++ b/src/styles/blocks/profile.pcss
@@ -1,11 +1,11 @@
 .profile {
-  @include desktop() {
+  @include desktop {
     width: 100%;
   }
-  @include tablets() {
+  @include tablets {
     width: auto;
   }
-  @include phones() {
+  @include phones {
     width: 100%;
   }
   &__key {
@@ -15,7 +15,7 @@
     line-height: 30px;
     opacity: 0.15;
 
-    @include desktop() {
+    @include desktop {
       font-size: 14px;
       line-height: 24px;
     }
@@ -27,13 +27,13 @@
     font-weight: 600;
     line-height: 30px;
 
-    @include desktop() {
+    @include desktop {
       font-size: 14px;
       line-height: 24px;
       padding-left: 0;
     }
 
-    @include tablets() {
+    @include tablets {
       padding-left: 50px;
     }
   }
