--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -94,3 +94,12 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
