add animation for skills

--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -11,6 +11,7 @@
 
   &__circle {
     fill: transparent;
+    transition: stroke-dashoffset 1s ease-out .25s;
     &_under {
       stroke: #eaeaea;
       stroke-width: 3px;
