use outline by keyboard navigation

--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -103,3 +103,11 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+:focus {
+  outline: #08f auto 2px;
+}
+
+body.using-mouse :focus {
+  outline: none;
+}
