--- a/src/components/parallax.pug
+++ b/src/components/parallax.pug
@@ -1,17 +1,17 @@
 include ../mixins
 
 .parallax
-  .parallax__layer.parallax__layer_sky(data-speed="15")
-    +image('content/sky.jpg', 'parallax__image')
-  .parallax__layer.parallax__layer_mountains(data-speed="12")
-    +image('content/mountains.png', 'parallax__image')
+  - var layers = [['sky', 'jpg', 15], ['mountains', 'png', 12]]
+  each layer in layers
+    .parallax__layer(data-speed=layer[2] class=`parallax__layer_${layer[0]}`)
+      +picture(layer[0], layer[1], '')
   .parallax__layer.parallax__layer_title(data-speed="9")
     include main-title
   .parallax__layer.parallax__layer_subtitle(data-speed="9")
     include main-subtitle
-  .parallax__layer.parallax__layer_train(data-speed="6")
-    +image('content/train.png', 'parallax__image')
-  .parallax__layer.parallax__layer_ground(data-speed="3")
-    +image('content/grass.png', 'parallax__image')
+  - var layers = [['train', 'png', 6], ['grass', 'png', 3]]
+  each layer in layers
+    .parallax__layer(data-speed=layer[2] class=`parallax__layer_${layer[0]}`)
+      +picture(layer[0], layer[1], '')
   .parallax__layer.parallax__layer_first-gradient(data-speed="3")
   .parallax__layer.parallax__layer_second-gradient(data-speed="3")
