--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -5,3 +5,11 @@ mixin icon(name, className)
 
 mixin image(path, className)
   img(src=require(`images/${path}`) class=className)
+
+mixin picture(name, ext, mobile)
+  picture
+    source(media="(min-width: 1200px)" type="image/webp" srcset=require(`images/content/${name}@2x.webp`) + ' 1x, ' + require(`images/content/${name}@3x.webp`) + ' 2x')
+    source(media="(min-width: 769px)" type="image/webp" srcset=require(`images/content/${name}.webp`) + ' 1x, ' + require(`images/content/${name}@2x.webp`) + ' 2x')
+    source(media="(min-width: 1200px)" srcset=require(`images/content/${name}@2x.${ext}`) + ' 1x, ' + require(`images/content/${name}@3x.${ext}`) + ' 2x')
+    source(media="(min-width: 769px)" srcset=require(`images/content/${name}.${ext}`) + ' 1x, ' + require(`images/content/${name}@2x.${ext}`) + ' 2x')
+    img.parallax__image(src=mobile)
