--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -31,6 +31,18 @@
   &__prev-button {
     margin-right: 30px;
   }
+  &__prev-button_disabled, &__next-button_disabled {
+    position: relative;
+    opacity: 0.5;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+  }
   &__body {
     margin-top: 97px;
     width: 1000px;
@@ -49,10 +61,12 @@
     }
   }
   &__list {
-    display: flex;
-    transition: transform 0.3s ease;
   }
   &__item {
+    width: 50%;
     padding-right: 20px;
+    @include tablets {
+      width: 100%;
+    }
   }
 }
