--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -5,17 +5,13 @@ script(type="text/x-template")#reviews-content
     .reviews__header
       .reviews__title Что обо мне говорят
       .reviews__controls
-        .reviews__prev-button(@click="goToPrevReview")
+        .reviews__prev-button(:class="{ 'reviews__prev-button_disabled': currentReviewIndex === 0 }" @click="goToPrevReview")
           +arrow-button('prev', 'circle', 'transparent')
-        .reviews__next-button(@click="goToNextReview")
+        .reviews__next-button(:class="{ 'reviews__next-button_disabled': currentReviewIndex === reviews.length - 1 }" @click="goToNextReview")
           +arrow-button('next', 'circle', 'transparent')
     .reviews__body
-      .reviews__list(:style="`width: ${itemWidth*reviews.length}%; transform: translateX(-${currentReviewIndex*100/reviews.length}%)`")
-        .reviews__item(
-          v-for="(review, index) in reviewsWithRequiredImages"
-          :key="index"
-          :style="`width: ${100/reviews.length}%`"
-        )
+      flickity.reviews__list(ref="flickity" :options="flickityOptions")
+        .carousel-cell.reviews__item(v-for="(review, index) in reviewsWithRequiredImages" :key="index")
           review(v-bind="review")
 
 script(type="text/x-template")#review
