Use vue for feedback form

--- a/src/components/feedback-form.pug
+++ b/src/components/feedback-form.pug
@@ -6,10 +6,10 @@ form.feedback-form
   .feedback-form__title Связаться со мной
   .feedback-form__row
     .feedback-form__name
-      +input('text', 'Введите ваше имя', '', true, 'user')
+      +input('text', 'Введите ваше имя', 'name', false, 'user')
     .feedback-form__mail
-      +input('email', 'Введите ваш email', '', true, 'envelope')
+      +input('email', 'Введите ваш email', 'mail', false, 'envelope')
   .feedback-form__message
-    +textarea('Сообщение к письму', '', true, 'message')
+    +textarea('Сообщение к письму', 'message', false, 'message')
   .feedback-form__button
     +button('Отправить', 'submit')
