--- a/src/components/feedback-section.pug
+++ b/src/components/feedback-section.pug
@@ -5,4 +5,4 @@ section#reviews.feedback-section
     .feedback-section__reviews
       #reviews-container
     #contact.feedback-section__form
-      include feedback-form
+      #form-container
