--- a/src/styles/blocks/textarea.pcss
+++ b/src/styles/blocks/textarea.pcss
@@ -1,5 +1,6 @@
 .textarea {
   position: relative;
+  line-height: 0;
   width: 100%;
   &__control {
     padding-left: 45px;
@@ -20,6 +21,10 @@
     &:focus {
       border-bottom-color: $accent-color;
     }
+    &_invalid,
+    &_invalid:focus {
+      border-bottom-color: $danger-color;
+    }
   }
   &__icon {
     position: absolute;
@@ -33,6 +38,10 @@
   }
   &__control:focus ~ &__icon {
     fill: $accent-color;
+  }
+  &__control_invalid ~ &__icon,
+  &__control_invalid:focus ~ &__icon {
+    fill: $danger-color;
   }
   &__label {
     position: absolute;
@@ -52,5 +61,35 @@
   }
   &__control:focus ~ &__label {
     transform: translateY(-200%);
+  }
+  &__error {
+    position: absolute;
+    top: 100%;
+    left: 45px;
+    padding: 0 20px;
+    color: white;
+    background-color: $danger-color;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 48px;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      border: 3px solid $danger-color;
+      border-left-width: 5px;
+      border-right-width: 5px;
+    }
+    &::before {
+      border-top-color: transparent;
+      border-left-color: transparent;
+      transform: translateX(-100%);
+    }
+    &::after {
+      border-top-color: transparent;
+      border-right-color: transparent;
+    }
   }
 }
