--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -2,7 +2,7 @@ include socials
 include menu
 
 header.header
-  a.header__logo(href="/")
+  a.header__logo(href="/loftschool-course")
     include logo
   button.header__hamburger.hamburger
     - for (var i = 1; i <= 3; i++) {
