Fix img src in picture

--- a/src/styles/blocks/remark.pcss
+++ b/src/styles/blocks/remark.pcss
@@ -1,12 +1,11 @@
 .remark {
   position: relative;
-  color: white;
   font-family: 'Open Sans';
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
   line-height: 30px;
-  opacity: 0.5;
+  color: rgba(white, 0.5);
 
   @include desktop {
     font-size: 14px;
