--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -12,4 +12,4 @@ mixin picture(name, ext, mobile)
     source(media="(min-width: 769px)" type="image/webp" srcset=require(`images/content/${name}.webp`) + ' 1x, ' + require(`images/content/${name}@2x.webp`) + ' 2x')
     source(media="(min-width: 1200px)" srcset=require(`images/content/${name}@2x.${ext}`) + ' 1x, ' + require(`images/content/${name}@3x.${ext}`) + ' 2x')
     source(media="(min-width: 769px)" srcset=require(`images/content/${name}.${ext}`) + ' 1x, ' + require(`images/content/${name}@2x.${ext}`) + ' 2x')
-    img.parallax__image(src=mobile)
+    img.parallax__image(src=`images/content/${name}.${ext}`)
