--- a/src/styles/blocks/skills-section.pcss
+++ b/src/styles/blocks/skills-section.pcss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   padding: 150px 0;
-  background-image: url('~images/content/wood-background.png');
+  background-image: url('~images/content/wood-background.jpg');
   background-size: cover;
 
   @include desktop {
