--- a/src/styles/blocks/slider-thumbs.pcss
+++ b/src/styles/blocks/slider-thumbs.pcss
@@ -20,15 +20,21 @@
       left: 0;
       right: 0;
       bottom: 0;
-      border: 3px solid $accent-color;
       opacity: 0;
       z-index: 1;
+      transition: opacity 0.2s ease;
+    }
+    &_active::after {
+      border: 3px solid $accent-color;
     }
     &:hover,
     &_active {
       &::after {
         opacity: 1;
       }
+    }
+    &:hover::after {
+      background-color: rgba($accent-color, 0.3);
     }
   }
   &__image {
