--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -29,7 +29,7 @@ body {
 }
 
 .parallax-container {
-  background-image: url('~images/content/black-background.png');
+  background-image: url('~images/content/black-background.jpg');
   background-size: contain;
 }
 
