--- a/src/styles/blocks/leaves-parallax.pcss
+++ b/src/styles/blocks/leaves-parallax.pcss
@@ -1,7 +1,7 @@
 .leaves-parallax {
   width: 100%;
   height: 100%;
-  background-image: url('~images/content/autumn.png');
+  background-image: url('~images/content/autumn.jpg');
   background-size: cover;
   background-position: 0 0;
 
