Fix works slider

--- a/src/styles/blocks/slider-display.pcss
+++ b/src/styles/blocks/slider-display.pcss
@@ -65,6 +65,9 @@
       display: none;
     }
   }
+  &__thumbs-list {
+    transition: transform 0.2s ease;
+  }
   &__buttons {
     position: absolute;
     left: calc(100% - 10vw);
