--- a/src/styles/blocks/slider-display.pcss
+++ b/src/styles/blocks/slider-display.pcss
@@ -83,3 +83,20 @@
     }
   }
 }
+
+.fade {
+  &-enter-active,
+  &-leave-active {
+    transition: opacity 0.3s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &-enter,
+  &-leave-to {
+    opacity: 0;
+  }
+}
