--- a/src/admin/index.pug
+++ b/src/admin/index.pug
@@ -2,7 +2,7 @@
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Портфолио | Администрирование
     meta(name="description" content="Сайт-портфолио веб-разработчика Курочкиной Татьяны")
