--- a/src/styles/blocks/slider-tags.pcss
+++ b/src/styles/blocks/slider-tags.pcss
@@ -1,9 +1,14 @@
 .slider-tags {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  @include tablets {
+    justify-content: center;
+  }
   &__item {
     padding: 0 25px;
     margin-right: 15px;
+    margin-bottom: 15px;
     background-color: rgba(122, 160, 197, 0.1);
     color: rgba(40, 51, 64, 0.7);
     font-size: 15px;
