--- a/src/styles/blocks/review-author.pcss
+++ b/src/styles/blocks/review-author.pcss
@@ -12,8 +12,9 @@
     }
   }
   &__avatar-image {
+    height: 100%;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center center;
   }
   &__name {
