--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,55 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Портфолио | ТК
     meta(name="description" content="Сайт-портфолио веб-разработчика Курочкиной Татьяны")
+    style.
+      body {
+        overflow: hidden;        
+      }
+      .preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #1b1f22;
+        z-index: 1000;
+      }
+      .lds-ripple {
+        display: inline-block;
+        position: relative;
+        width: 64px;
+        height: 64px;
+      }
+      .lds-ripple div {
+        position: absolute;
+        border: 2px solid #fff;
+        opacity: 1;
+        border-radius: 50%;
+        animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+      }
+      .lds-ripple div:nth-child(2) {
+        animation-delay: -0.5s;
+      }
+      @keyframes lds-ripple {
+        0% {
+          top: 28px;
+          left: 28px;
+          width: 0;
+          height: 0;
+          opacity: 1;
+        }
+        100% {
+          top: -1px;
+          left: -1px;
+          width: 58px;
+          height: 58px;
+          opacity: 0;
+        }
+      }
+
     link(rel="apple-touch-icon" sizes="57x57" href=require("../public/apple-icon-57x57.png"))
     link(rel="apple-touch-icon" sizes="60x60" href=require("../public/apple-icon-60x60.png"))
     link(rel="apple-touch-icon" sizes="72x72" href=require("../public/apple-icon-72x72.png"))
@@ -23,6 +72,10 @@ html(lang="ru")
     meta(name="msapplication-TileImage" content=require("../public/ms-icon-144x144.png"))
     meta(name="theme-color" content="#ffffff")
   body
+    .preloader
+      .lds-ripple
+       div
+       div
     .wrapper
       .parallax-container
         include components/parallax
